k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: apptest2.com
    http:
      paths:
      # - path: "/api"
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: backend-service
      #       port:
      #         number: 80
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend-app
            port:
              number: 8501
