k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default
  namespace: carbonservice
  annotations:
    #kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: carbonasservice.com
    http:
      paths:
      # - path:  /api/?(.*) 
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: backend-service
      #       port:
      #         number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-app
            port:
              number: 8501
